@@ -11,7 +11,6 @@ import net.sourceforge.fenixedu.domain.DomainFactory;
 import net.sourceforge.fenixedu.domain.ExecutionDegree;
 import net.sourceforge.fenixedu.domain.finalDegreeWork.Scheduleing;
 import net.sourceforge.fenixedu.persistenceTier.ExcepcaoPersistencia;
-import net.sourceforge.fenixedu.persistenceTier.IPersistentFinalDegreeWork;
 
 /**
  * @author Luis Cruz
@@ -23,28 +22,20 @@ public class DefineFinalDegreeWorkCandidacySubmisionPeriod extends Service {
             throws ExcepcaoPersistencia {
 
         if (executionDegreeOID != null && startOfCandidacyPeriod != null && endOfCandidacyPeriod != null) {
-            IPersistentFinalDegreeWork persistentFinalDegreeWork = persistentSupport
-                    .getIPersistentFinalDegreeWork();
-
-            ExecutionDegree cursoExecucao = (ExecutionDegree) persistentObject.readByOID(
-                    ExecutionDegree.class, executionDegreeOID);
+            ExecutionDegree cursoExecucao = rootDomainObject.readExecutionDegreeByOID(executionDegreeOID);
 
             if (cursoExecucao != null) {
-                Scheduleing scheduleing = persistentFinalDegreeWork
-                        .readFinalDegreeWorkScheduleing(executionDegreeOID);
-
+                Scheduleing scheduleing = cursoExecucao.getScheduling();
                 if (scheduleing == null) {
                     scheduleing = DomainFactory.makeScheduleing();
-                    scheduleing.setCurrentProposalNumber(new Integer(1));
+                    scheduleing.setCurrentProposalNumber(Integer.valueOf(1));
                 }
 
                 scheduleing.addExecutionDegrees(cursoExecucao);
                 scheduleing.setStartOfCandidacyPeriod(startOfCandidacyPeriod);
                 scheduleing.setEndOfCandidacyPeriod(endOfCandidacyPeriod);
             }
-
         }
-
     }
 
 }
